# ExercismRust

./: Cargo.toml  README.md
src/: accumulate.rs  acronym.rs  affine_cipher.rs  all_your_base.rs  allergies.rs  alphametics.rs  anagram.rs  armstrong_numbers.rs  atbash_cipher.rs  beer_song.rs  binary_search.rs  bob.rs  book_store.rs  bowling.rs  circular_buffer.rs  clock.rs  collatz.rs  crypto_square.rs  custom_set.rs  decimal.rs  diamond.rs  difference_of_squares.rs  diffie_hellman.rs  dominoes.rs  dot_dsl.rs  doubly_linked_list.rs  eliuds_eggs.rs  etl.rs  fizzy.rs  forth.rs  gigasecond.rs  grade_school.rs  grains.rs  grep.rs  hamming.rs  hello_world.rs  high_scores.rs  isbn.rs  isogram.rs  kindergarten_garden.rs  (+59 more)
